[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxl-cli"
version = "0.3.0"
description = "Context Engineering CLI — Reduce AI agent token waste with compressed codebase skeletons, task-focused instructions, and session checkpoints. Zero AI, pure parsing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Prashanth Reddy"},
]
keywords = [
    "context-engineering", "llm", "ai-agents", "token-optimization",
    "copilot", "tree-sitter", "codebase-map", "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-typescript>=0.23",
    "rich>=13.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
dev = ["pytest>=7.0", "build", "twine"]

[project.urls]
Homepage = "https://github.com/iamprashanth-1/ctxl"
Repository = "https://github.com/iamprashanth-1/ctxl"
Issues = "https://github.com/iamprashanth-1/ctxl/issues"

[project.scripts]
ctxl = "ctxl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctxl*"]
